--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ wasm-bindgen-test = "0.3.18"
 [dependencies]
 seed = "0.8.0"
 fixed-vec-deque = "0.1.9"
-
+rand = {version= "0.8.3"}
+getrandom = {version = "0.2", features=["js"]}
 [dependencies.web-sys]
 version = "0.3.45"
 features = [
